--- a/DLPhotoPickerDemo/Podfile
+++ b/DLPhotoPickerDemo/Podfile
@@ -3,7 +3,7 @@ platform :ios, '7.0'
 # Uncomment this line if you're using Swift
 # use_frameworks!
 
-target 'DLPhotoPicker' do
+target 'DLPhotoPickerDemo' do
 
 pod 'DLPhotoPicker'
 
