--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: objective-c
 osx_image: xcode7.1
 before_install:
   - pod update --project-directory=./DLPhotoPickerDemo
+  - pip install codecov
 script:
   - xctool -workspace DLPhotoPickerDemo/DLPhotoPickerDemo.xcworkspace -scheme DLPhotoPickerDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 after_success:
-  - if [ "$FASTLANE_LANE" == "code_coverage" ]; then
-     bash <(curl -s https://codecov.io/bash);
-    fi
+  - codecov
