--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: objective-c
 osx_image: xcode7.1
 before_install:
   - pod update --project-directory=./DLPhotoPickerDemo
-  - pip install codecov
 script:
   - xctool -workspace DLPhotoPickerDemo/DLPhotoPickerDemo.xcworkspace -scheme DLPhotoPickerDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
